assets/app.css
@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@600&display=swap');

body {
  background-color: #00cfc5;
  font-family: "Bai Jamjuree";
  font-size: 100%;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Prompt', sans-serif;
  font-weight: bold;
  margin-top: 2rem;
  margin-bottom: 1rem;
}

h1:first-child,
h2:first-child,
h3:first-child,
h4:first-child,
h5:first-child,
h6:first-child {
  margin-top: 0;
}

.page-hero {
  background-image: url("/assets/landing-bg.jpg");
  background-repeat: no-repeat;
  background-position: 50% 0;
  background-size: cover;
}

.form-text {
  color: #1e5a55;
}

.signature-field {
  outline: #ced4da dashed 4px;
  position: relative;
  width: 100%;
  max-width: 600px;
  height: 300px;
  overflow: hidden;
  background-image: url("/assets/signature-bg.png");
  background-position: center;
  user-select: none;
}

.signature-field.is-valid {
  outline: #198754 solid 4px;
}

.signature-cover {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 1000;
  background-color: rgba(255, 255, 255, 0.5);
}

.signature-toolbar {
  position: absolute;
  right: 0;
  top: 0;
  z-index: 999;
}

.signature-toolbar .btn-outline-warning,
.signature-toolbar .btn-outline-danger {
  width: 64px;
}

.signature-pad {
  position: absolute;
  width: 600px;
  height: 300px;
  left: -9999px;
  right: -9999px;
  margin: auto;
}

.intro-box {
  background-color: #fff;
  padding: 24px;
  border-radius: 16px;
  box-shadow: 0 8px 16px rgb(0, 0, 0, 0.2);
}

ol>li, ul>li {
  margin-bottom: 1rem;
}

ol {
  list-style: none;
  counter-reset: my-awesome-counter;
  padding-left: 0;
}

ol li {
  display: flex;
  counter-increment: my-awesome-counter;
}

ol li::before {
  content: counter(my-awesome-counter) ". ";
  background-color: #00CFC5;
  font-weight: bold;
  min-width: 32px;
  height: 32px;
  border-radius: 16px;
  text-align: center;
  margin-right: 16px;
  display: block;
  color: white;
}

a:any-link {
  color: #00827C;
}

